tests/react_jsx_fragments/react_jsx_fragments.exp
Error ----------------------------------------------------- embedded_ltgt.js:4:1

Unexpected token ILLEGAL

Error: embedded_ltgt.js:4
  4: 
     ^ Unexpected token ILLEGAL

Error ------------------------------------------------ incorrect_token_lt.js:3:4

Unexpected token <

Error: incorrect_token_lt.js:3
  3: <><</>; // Error: `<` is not a valid token here.
        ^ Unexpected token <

Error -------------------------------------- nonmatching_closing_element.js:3:17

Expected corresponding JSX closing tag for JSX fragment

Error: nonmatching_closing_element.js:3
  3: <></elementName>; // Error: `elementName` is not a valid token here.
                     ^ Expected corresponding JSX closing tag for JSX fragment

Error -------------------------------------- nonmatching_opening_element.js:3:17

Expected corresponding JSX closing tag for elementName

Error: nonmatching_opening_element.js:3
  3: <elementName></>; // Error: `elementName` is not a valid token here.
                     ^ Expected corresponding JSX closing tag for elementName


Found 4 errors
